--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"author": "Linh Nguyen Ngoc Hong",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
@@ -11,5 +10,6 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	}
+	},
+	"author": "Linh Nguyen Ngoc Hong"
 }
